--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,34 @@ html,
 body {
 	overflow: hidden;
 }
+
+#audioInput {
+	position: fixed;
+	top: 20px;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	z-index: 100;
+	font-size: 30px;
+	color: white;
+}
+
+#play {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 100;
+	font-size: 24px;
+	display: block;
+	padding: 8px 16px;
+	color: white;
+	background-color: blueviolet;
+	border: none;
+	border-radius: 8px;
+	transition: all 300ms ease;
+	cursor: pointer;
+
+	&:hover {
+		background-color: rgb(113, 17, 202);
+	}
+}
